instructions/Details_LogShortLong_Engine.txt
TABELA DE VERIFICAÇÃO
-----------------------
                            Engine
features    
(especificações)        A (Chakra)    B(SpiderMonkey)    C(V8)           D(Hermes) ... 
    esp1               Suporta S/N?     Suporta S/N?    Suporta S/N?    Suporta S/N?
    esp2                   ...              ...             ...             ... 
    esp3                   ...              ...             ...             ...
    ...

O arquivo de input é varrido comparando seu código fonte com o padrão de especificação ECMAScript, caso haja divergências será apresentado output para todos as defnições de engines contendo a descrição do erro, warning, bug. A mensagem pode variar de acordo com o motor/engine ou pode ser igual. Os testes são as SEEDS (pois usa FUZZERS) com e sem FUZZ (sem fuzzer: arquivos válidos) que são agrupadas. Através do teste diferencial é gerado um WARNING se através de programas iguais com comportamentos semelhantes ele encontre divergências/discrepâncias via engine. Se o caso for um BUG ele irá ser reportado da seguinte forma:
-----------------------------INICIO BUG
BUG #29 (CONFIRMED)

Date reported:

Type: Assertion failure (TIPO DE BUG)

URLs: https://github.com/Microsoft/ChakraCore/issues/5968

Original: jsfuzz/seeds/v8/attached/6651_simple.js (ENGINE)

Fuzzed: fuzzed_attached_v8_6651_simple.js (NOME DO ARQUIVO, CÓDIGO FONTE JS)

Patch: 

Pattern:
-------------JavaScriptCore
Error: Wasm validation failure expected
-------------Chakra
Error: Wasm validation failure expected
-------------SpiderMonkey (SEM VERIFICAÇÃO DE BUG NESTA ENGINE)
-------------v8 (SEM VERIFICAÇÃO DE BUG NESTA ENGINE)
Explanation: 
it was observed that Chakra didn't raised a WASM.CompileError due 31 offset.
-------------------------------------------------------------------------------FIM BUG

Exemplo LOG SHORT:
-------------------------------------------------------------------------------INICIO LOG SHORT
(SUMÁRIO)
number of files processed: 2389
number of warnings (interesting cases) observed: 153
number of invalid cases observed: 0
number of cache hits: 82
number of buckets: 71

Arquivos in bucket:

/home/igorsimoes/jsengines-differential-testing/jsfuzz/utils/../../seeds/repos/hermes/js_test/external/esprima/test_fixtures/ES6/object-initialiser/invalid-proto-setter-literal-identifier.js (copied)
 /home/igorsimoes/jsengines-differential-testing/jsfuzz/utils/../../seeds/repos/hermes/js_test/external/esprima/test_fixtures/ES6/object-initialiser/invalid-proto-literal-identifier.js (copied)
 /home/igorsimoes/jsengines-differential-testing/jsfuzz/utils/../../seeds/repos/hermes/js_test/external/esprima/test_fixtures/ES6/object-initialiser/invalid-proto-getter-literal-identifier.js (copied)
 /home/igorsimoes/jsengines-differential-testing/jsfuzz/utils/../../seeds/repos/hermes/js_test/external/esprima/test_fixtures/ES6/object-initialiser/invalid-proto-literals.js (copied)
 /home/igorsimoes/jsengines-differential-testing/jsfuzz/utils/../../seeds/repos/hermes/js_test/test/IRGen/__proto__duplicated.js (copied)
 /home/igorsimoes/jsengines-differential-testing/jsfuzz/utils/../../seeds/repos/hermes/js_test/external/esprima/test_fixtures/ES6/object-initialiser/invalid-proto-identifier-literal.js (copied)
 /home/igorsimoes/jsengines-differential-testing/jsfuzz/utils/../../seeds/repos/hermes/js_test/external/esprima/test_fixtures/ES6/object-initialiser/invalid-proto-identifiers.js (copied)

-------------JavaScriptCore
Error: Attempted to redefine __proto__ property. (DESCRIÇÃO DO WARNING NESTA ENGINE)
-------------Chakra
Error: Syntax error
-------------SpiderMonkey
Error: property name __proto__ appears more than once in object literal (DESCRIÇÃO DIFERENTE DO WARNING NESTA ENGINE)
-------------v8
Error: Duplicate __proto__ fields are not allowed in object literals (DESCRIÇÃO DIFERENTE DO WARNING NESTA ENGINE)
-------------hermes
---------------------------------------------------------------------------------------------------------FIM LOG SHORT

Exemplo LOG LONG:
---------------------------------------------------------------------------------------------------------INICIO LOG LONG


                ***  /home/igorsimoes/jsengines-differential-testing/jsfuzz/utils/../../seeds/repos/hermes/js_test/test/IRGen/__proto__duplicated.js

                -------------JavaScriptCore
Exception: SyntaxError: Attempted to redefine __proto__ property. (MSG OUTPUT/WARNING NESTA ENGINE)
at /home/igorsimoes/jsengines-differential-testing/jsfuzz/utils/../../seeds/repos/hermes/js_test/test/IRGen/__proto__duplicated.js:10 (ARQUIVO VERIFICADO)


                -------------Chakra
SyntaxError: Syntax error
	at code (__proto__duplicated.js:10:40) (TRECHO DO CÓDIGO LOCALIZADO)


                -------------SpiderMonkey
/home/igorsimoes/jsengines-differential-testing/jsfuzz/utils/../../seeds/repos/hermes/js_test/test/IRGen/__proto__duplicated.js:10:30 SyntaxError: property name __proto__ appears more than once in object literal


                -------------v8
/home/igorsimoes/jsengines-differential-testing/jsfuzz/utils/../../seeds/repos/hermes/js_test/test/IRGen/__proto__duplicated.js:10: SyntaxError: Duplicate __proto__ fields are not allowed in object literals
var obj = {__proto__:{}, a:1, __proto__:{}} (TRECHO DO CÓDIGO LOCALIZADO)
                              ^^^^^^^^^
SyntaxError: Duplicate __proto__ fields are not allowed in object literals (MSG WARNING NESTA ENGINE)



                -------------hermes
/home/igorsimoes/jsengines-differential-testing/jsfuzz/utils/../../seeds/repos/hermes/js_test/test/IRGen/__proto__duplicated.js:10:31: error: __proto__ was set multiple times in the object definition.
var obj = {__proto__:{}, a:1, __proto__:{}} (TRECHO DO CÓDIGO LOCALIZADO)
                              ^~~~~~~~~~~~
/home/igorsimoes/jsengines-differential-testing/jsfuzz/utils/../../seeds/repos/hermes/js_test/test/IRGen/__proto__duplicated.js:10:12: note: The first definition was here.
var obj = {__proto__:{}, a:1, __proto__:{}} (TRECHO DO CÓDIGO LOCALIZADO)
           ^~~~~~~~~~~~
Emitted 1 errors. exiting.
---------------------------------------------------------------------------------------------------------------FIM LOG LONG


